--- a/bib.bib
+++ b/bib.bib
@@ -11935,3 +11935,108 @@
                   \url{http://www.jstor.org/stable/20532142}},
   keywords =     {music harmony and theory}
 }
+
+@Article{howelljr64:cabezon,
+  author =       {{Almonte C.} {Howell Jr.}},
+  title =        {Cabezón: An Essay in Structural Analysis},
+  journal =      {The Musical Quarterly},
+  year =         1964,
+  publisher =    {Oxford University Press},
+  volume =       50,
+  number =       1,
+  pages =        {18--30},
+  month =        {Jan},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/740183}}
+}
+
+@Article{leach00:counterpoint,
+  author =       {Elizabeth Eva Leach},
+  title =        {Counterpoint and Analysis in Fourteenth-Century
+                  Song},
+  journal =      {Journal of Music Theory},
+  year =         2000,
+  publisher =    {Duke University Press on behalf of the Yale
+                  University Department of Music},
+  volume =       44,
+  number =       1,
+  pages =        {45--79},
+  month =        {Spring},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/3090669}},
+  keywords =     {music harmony and theory}
+}
+
+@Article{dalglish69:hocket,
+  author =       {William E. Dalglish},
+  title =        {The Hocket in Medieval Polyphony},
+  journal =      {The Musical Quarterly},
+  year =         1969,
+  publisher =    {Oxford University Press},
+  volume =       55,
+  number =       3,
+  pages =        {344--363},
+  month =        {Jul.},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/741005}},
+  keywords =     {music harmony and theory}
+}
+
+@Article{elders89:guillaume,
+  author =       {Willem Elders},
+  title =        {Guillaume Dufay's Concept of Faux-Bourdon},
+  journal =      {Revue belge de Musicologie / Belgisch Tijdschrift
+                  voor Muziekwetenschap},
+  year =         1989,
+  publisher =    {Societe Belge de Musicologie},
+  volume =       43,
+  pages =        {173--195},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/3686766}},
+  keywords =     {music harmony and theory}
+}
+
+@Article{harbinson66:isorhythmic,
+  author =       {Denis Harbinson},
+  title =        {Isorhythmic Technique in the Early Motet},
+  journal =      {Music \& Letters},
+  year =         1966,
+  publisher =    {Oxford University Press},
+  volume =       47,
+  number =       2,
+  pages =        {100--109},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/731197}},
+  keywords =     {music harmony and theory}
+}
+
+@Article{bukofzer52:fauxbourdon,
+  author =       {Manfred F. Bukofzer},
+  title =        {Fauxbourdon Revisited},
+  journal =      {The Musical Quarterly},
+  year =         1952,
+  publisher =    {Oxford University Press},
+  volume =       38,
+  number =       1,
+  pages =        {22--47},
+  month =        {Jan},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/739592}},
+  keywords =     {music harmony and theory}
+}
+
+@Article{crocker62:discant,
+  author =       {Richard L. Crocker},
+  title =        {Discant, Counterpoint, and Harmony},
+  journal =      {Journal of the American Musicological Society},
+  year =         1962,
+  publisher =    {University of California Press on behalf of the
+                  American Musicological Society},
+  volume =       15,
+  number =       1,
+  pages =        {1--21},
+  month =        {Spring},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/830051}},
+  keywords =     {music harmony and theory}
+}
