--- a/bib.bib
+++ b/bib.bib
@@ -12040,3 +12040,21 @@
                   \url{http://www.jstor.org/stable/830051}},
   keywords =     {music harmony and theory}
 }
+
+@Article{kirkman90:early,
+  author =       {Andrew Kirkman},
+  title =        {Some Early Fifteenth-Century Fauxbourdons by Dufay
+                  and His Contemporaries: A Study in
+                  Liturgically-Motivated Musical Style},
+  journal =      {Tijdschrift van de Vereniging voor Nederlandse
+                  Muziekgeschiedenis},
+  year =         1990,
+  publisher =    {Koninklijke Vereniging voor Nederlandse
+                  Muziekgeschiedenis},
+  volume =       {D. 40ste},
+  number =       {Afl. 1ste},
+  pages =        {3--35},
+  note =         {Available at
+1                  \url{http://www.jstor.org/stable/938883}},
+  keywords =     {music harmony and theory}
+}
