--- a/bib.bib
+++ b/bib.bib
@@ -919,7 +919,7 @@
   keywords =     {ai}
 }
 
-@Article{	  beach79:pitch,
+@Article{beach79:pitch,
   author =       {David W. Beach},
   title =        {Pitch Structure and the Analytic Process in Atonal
                   Music: An Interpretation of the Theory of Sets},
@@ -4610,7 +4610,7 @@
   keywords =     {computer science}
 }
 
-@Book{		  green79:form,
+@Book{green79:form,
   title =        {Form in tonal music: an introduction to analysis},
   publisher =    {Holt Rinehart and Winston},
   year =         1979,
@@ -7413,7 +7413,7 @@
   keywords =     {musical contour}
 }
 
-@Article{	  morris98:voice,
+@Article{morris98:voice,
   author =       {Robert D. Morris},
   title =        {Voice-Leading Spaces},
   journal =      {Music Theory Spectrum},
@@ -12055,6 +12055,69 @@
   number =       {Afl. 1ste},
   pages =        {3--35},
   note =         {Available at
-1                  \url{http://www.jstor.org/stable/938883}},
+                  \url{http://www.jstor.org/stable/938883}},
+  keywords =     {music harmony and theory}
+}
+
+@Book{lewin87:generalized,
+  author =       {David Lewin},
+  title =        {Generalized musical intervals and transformations},
+  publisher =    {Yale University Press},
+  year =         1987,
+  address =      {New Haven},
+  keywords =     {music harmony and theory}
+}
+
+@Book{schenker54:harmony,
+  author =       {Heinrich Schenker},
+  title =        {Harmony},
+  publisher =    {The University of Chicago Press},
+  year =         1954,
+  address =      {Chicago and London},
+  annote =       {Edited by Oswald Jonas. Translated by Elisabeth Mann
+                  Borgese},
+  keywords =     {music harmony and theory}
+}
+
+@Book{salzer.ea52:structural,
+  author =       {Felix Salzer and Leopold Mannes},
+  title =        {Structural hearing: tonal coherence in music},
+  publisher =    {Charles Boni},
+  year =         1952,
+  address =      {New York},
+  keywords =     {music harmony and theory}
+}
+
+@Book{med80:teoria,
+  author =       {Bohumil Med},
+  title =        {Teoria da Música},
+  publisher =    {MusiMed},
+  year =         1980,
+  address =      {Brasília},
+  edition =      3,
+  keywords =     {music harmony and theory}
+}
+
+@Book{pilhofer.ea07:music,
+  author =       {Michael Pilhofer and Holly Day},
+  title =        {Music theory for dummies},
+  publisher =    {Wiley Publishing, Inc},
+  year =         2007,
+  address =      {Hoboken, NJ},
+  keywords =     {music harmony and theory}
+}
+
+@Article{maniates66:mannerist,
+  author =       {Maria Rika Maniates},
+  title =        {Mannerist Composition in Franco-Flemish Polyphony},
+  journal =      {The Musical Quarterly},
+  year =         1966,
+  publisher =    {Oxford University Press},
+  volume =       52,
+  number =       1,
+  pages =        {17--36},
+  month =        {Jan},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/741126}},
   keywords =     {music harmony and theory}
 }
