--- a/bib.bib
+++ b/bib.bib
@@ -12121,3 +12121,13 @@
                   \url{http://www.jstor.org/stable/741126}},
   keywords =     {music harmony and theory}
 }
+
+@book{jeppesen92:counterpoint,
+  title =        {{Counterpoint: the polyphonic vocal style of the
+                  sixteenth century}},
+  author =       {Knud Jeppesen},
+  year =         1992,
+  publisher =    {Dover Publications},
+  address =      {New York},
+  keywords =     {music harmony and theory}
+}
