Remove entradas repetidas

--- a/bib.bib
+++ b/bib.bib
@@ -219,15 +219,6 @@
 }
 
 @Book{		  adler89:study,
-  author =       {Samuel Adler},
-  title =        {The Study of Orchestration},
-  publisher =    {W. W. Norton \& Company},
-  year =         1989,
-  note =         {[Biblioteca da Emus: 785.028 a2370]},
-  keywords =     {aula composicao}
-}
-
-@Book{		  adler89:study,
   title =        {The Study of Orchestration},
   publisher =    {W.W. Norton \& Company},
   year =         1989,
@@ -235,6 +226,8 @@
   address =      {New York},
   edition =      {2. ed.},
   isbn =         393958078,
+  annote =         {[Biblioteca da Emus: 785.028 a2370]},
+  keywords =     {aula composicao},
   keywords =     {orchestration}
 }
 
@@ -993,19 +986,13 @@
 }
 
 @Book{		  beethoven70:complete,
-  author =       {L. V. Beethoven},
-  title =        {Complete String Quartets},
-  year =         1970,
-  publisher =    {New York: Dover Publications},
-  keywords =     {music harmony and theory}
-}
-
-@Book{		  beethoven70:complete,
   title =        {Complete String Quartets},
   publisher =    {Dover Publications, Inc},
   year =         1970,
   author =       {{Ludwig van} Beethoven},
-  keywords =     {music scores}
+  address =      {New York},
+  keywords =     {music scores},
+  keywords =     {music harmony and theory}
 }
 
 @Book{		  behague.ea76:music,
@@ -2429,17 +2416,9 @@
   editor =       {Thomas Street Christensen},
   year =         2002,
   publisher =    {Cambridge University Press},
-  address =      {Cambridge},
-  keywords =     {music history}
-}
-
-@Book{		  christensen02:cambridge,
-  editor =       {Thomas Christensen},
-  title =        {The Cambridge History of Western Music Theory},
-  publisher =    {Cambridge University Press},
-  year =         2002,
   address =      {Cambridge; New York},
-  keywords =     {music tempo}
+  keywords =     {music history},
+  keywords =     {music harmony and theory}
 }
 
 @Misc{		  chroboczek,
@@ -2862,17 +2841,6 @@
 }
 
 @Article{	  crocker63:pythagorean,
-  author =       {Crocker, Richard L.},
-  title =        {Pythagorean Mathematics and Music},
-  journal =      {Journal of Aesthetics and Art Criticism},
-  year =         1963,
-  volume =       22,
-  number =       2,
-  pages =        {189--198},
-  keywords =     {greek music}
-}
-
-@Article{	  crocker63:pythagorean,
   author =       {Richard L. Crocker},
   title =        {Pythagorean Mathematics and Music},
   journal =      {Journal of Aesthetics and Art Criticism},
@@ -2888,17 +2856,7 @@
   volume =       22,
   number =       2,
   pages =        {189--198},
-  month =        8
-}
-
-@Article{	  crocker64:pythagorean,
-  author =       {Crocker, Richard L.},
-  title =        {Pythagorean Mathematics and Music},
-  journal =      {Journal of Aesthetics and Art Criticism},
-  year =         1964,
-  volume =       22,
-  number =       3,
-  pages =        {325--335},
+  month =        8,
   keywords =     {greek music}
 }
 
@@ -2910,15 +2868,15 @@
   whereis =      {Pasta C},
   annote =       {Conclusão do artigo publicado no volume anterior. As
                   duas partes estão grampeadas},
-  keyword =      {musica grega},
   volume =       22,
   number =       3,
   pages =        {325--335},
-  month =        8
+  month =        8,
+  keywords =     {greek music}
 }
 
 @InCollection{	  crocker66:aristoxenus,
-  author =       {Crocker, Richard L.},
+  author =       {Richard L. Crocker},
   title =        {Aristoxenus and Greek Mathematics},
   booktitle =    {Aspects of Medieval and Renaissance Music: A
                   Birthday Offering to Gustave Reese},
@@ -2934,7 +2892,7 @@
   title =        {A history of musical style},
   publisher =    {McGraw-Hill Book Co.},
   year =         1966,
-  author =       {Crocker, Richard L.},
+  author =       {Richard L. Crocker},
   address =      {New York},
   keywords =     {music history}
 }
@@ -3784,18 +3742,6 @@
 
 @Article{	  dowling78:scale,
   author =       {W. Jay Dowling},
-  title =        {Scale and contour: Two components of a theory of
-                  memory for melodies},
-  journal =      {Psychological Review},
-  year =         1978,
-  volume =       85,
-  pages =        {341--354},
-  number =       4,
-  keywords =     {musical contour}
-}
-
-@Article{	  dowling78:scale,
-  author =       {W. Jay Dowling},
   title =        {Scale and Contour: Two Components of a Theory of
                   Memory for Melodies},
   journal =      {Psychological Review},
@@ -3821,7 +3767,8 @@
                   earlier owrk using atonal melodies and shows the
                   interdependence of the two components, scale and
                   contour.},
-  keywords =     {perception}
+  keywords =     {perception},
+  keywords =     {musical contour}
 }
 
 @Article{	  dowling94:melodic,
@@ -5882,24 +5829,16 @@
 }
 
 @Book{		  kennan.ea83:technique,
-  author =       {Kent Kennan and Donald Granthan},
-  title =        {The Technique of Orquestration},
-  publisher =    {Prentice Hall},
-  year =         1983,
-  edition =      {2d~ed.},
-  address =      {New Jersey},
-  note =         {[Biblioteca da Emus: 785.028 k34]},
-  keywords =     {aula composicao}
-}
-
-@Book{		  kennan.ea83:technique,
   title =        {The technique of orchestration},
   publisher =    {Prentice-Hall},
   year =         1983,
   author =       {Kent Wheeler Kennan and Donald Grantham},
+  edition =      {2d~ed.},
   pages =        {xii, 403},
   address =      {Englewood Cliffs, N.J.},
   isbn =         139003088,
+  annote =       {[Biblioteca da Emus: 785.028 k34]},
+  keywords =     {aula composicao},
   keywords =     {orchestration}
 }
 
@@ -6754,20 +6693,6 @@
   author =       {Gareth Loy and Curtis Abbott},
   title =        {Programming languages for computer music synthesis,
                   performance, and composition},
-  journal =      {ACM Comput. Surv.},
-  volume =       17,
-  number =       2,
-  year =         1985,
-  pages =        {235--265},
-  publisher =    {ACM Press},
-  where =        {p235-loy.pdf},
-  keywords =     {computer music}
-}
-
-@Article{	  loy85:programming,
-  author =       {Gareth Loy and Curtis Abbott},
-  title =        {Programming languages for computer music synthesis,
-                  performance, and composition},
   journal =      {ACM Computing Surveys},
   year =         1985,
   keyword =      {synthesis},
@@ -6775,7 +6700,9 @@
   number =       2,
   month =        6,
   pages =        {235-265},
-  file =         {loy85:programming}
+  file =         {loy85:programming},
+  where =        {p235-loy.pdf},
+  keywords =     {computer music}
 }
 
 @InCollection{	  loy89:composing,
@@ -10824,17 +10751,9 @@
   author =       {Kurt Stone},
   address =      {New York},
   isbn =         393950530,
+  annote =       {[Biblioteca da Emus: 781.240904 s878]},
+  keywords =     {aula composicao},
   keywords =     {music notation}
-}
-
-@Book{		  stone80:music,
-  author =       {Stone, Kurt},
-  title =        {Music Notation in The Twentieth Century},
-  publisher =    {W. W. Norton},
-  year =         1980,
-  address =      {New York},
-  note =         {[Biblioteca da Emus: 781.240904 s878]},
-  keywords =     {aula composicao}
 }
 
 @InProceedings{	  stoyan08:lisp,
