Remove mais entradas repetidas

--- a/bib.bib
+++ b/bib.bib
@@ -2226,17 +2226,9 @@
   author =       {Alfredo Casella and Virgilio Mortari},
   address =      {Buenos Aires},
   comment =      {Trad. A. Jurafsky},
-  keywords =     {orchestration}
-}
-
-@Book{		  casella50:tecnica,
-  author =       {Alfredo Casella},
-  title =        {La Tecnica de la Orquestra Contemporanea},
-  publisher =    {Ricordi},
-  year =         1950,
-  address =      {Buenos Aires},
   note =         {[Biblioteca da Emus: 785.028 c3775]},
-  keywords =     {aula composicao}
+  keywords =     {aula composicao},
+  keywords =     {orchestration}
 }
 
 @Manual{	  castan02:music,
@@ -6428,22 +6420,14 @@
   where =        {paper}
 }
 
-@Book{		  lerdahl.ea83,
-  author =       {Fred Lerdahl and Ray S. Jackendoff},
-  title =        {A generative theory of tonal music},
-  publisher =    {MIT Press},
-  year =         1983,
-  address =      {Cambridge, MA and London},
-  keywords =     {music tempo}
-}
-
 @Book{		  lerdahl.ea83:generative,
   author =       {Fred Lerdahl and Ray Jackendoff},
   title =        {A Generative Theory of Tonal Music},
   publisher =    {MIT Press},
   year =         1983,
   address =      {Cambridge},
-  keywords =     {music harmony and theory}
+  keywords =     {music harmony and theory},
+  keywords =     {music tempo}
 }
 
 @Book{		  lerdahl.ea90:generative,
@@ -7857,18 +7841,6 @@
 @Article{	  oliveira01:busca,
   author =       {Jamary Oliveira},
   title =        {Em busca de uma codificação},
-  journal =      {Cuadernos Interamericanos De Investigación en
-                  Educación Musical},
-  year =         2001,
-  volume =       1,
-  number =       2,
-  file =         {jamary-CEM02103.pdf},
-  keywords =     {coding}
-}
-
-@Article{	  oliveira01:cod,
-  author =       {Jamary Oliveira},
-  title =        {Em busca de uma codificação},
   journal =      {Cuadernos interamericanos de investigación en
                   educación musical},
   pages =        {25--42},
@@ -7880,8 +7852,9 @@
   address =      {Colonia del Carmen},
   month =        {Agosto},
   publisher =    {UNAM. Escuela Nacional de Música},
+  where =        {jamary-CEM02103.pdf},
   keywords =     {computer music},
-  where =        {jamary-CEM02103.pdf}
+  keywords =     {coding}
 }
 
 @Misc{		  oliveira01:pcn,
