--- a/bib.bib
+++ b/bib.bib
@@ -226,7 +226,7 @@
   address =      {New York},
   edition =      {2. ed.},
   isbn =         393958078,
-  annote =         {[Biblioteca da Emus: 785.028 a2370]},
+  annote =       {[Biblioteca da Emus: 785.028 a2370]},
   keywords =     {aula composicao},
   keywords =     {orchestration}
 }
@@ -875,6 +875,21 @@
                   coppie -- Elegia -- Intermezzo interrotto --
                   Finale.},
   keywords =     {music scores}
+}
+
+@Article{	  bass88:prokofiev,
+  author =       {Richard Bass},
+  title =        {Prokofiev's Technique of Chromatic Displacement},
+  journal =      {Music Analysis},
+  year =         1988,
+  publisher =    {Blackwell Publishing},
+  volume =       7,
+  number =       2,
+  pages =        {197--214},
+  month =        {Jul},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/854056}},
+  keywords =     {music analysis}
 }
 
 @Misc{		  baudis,
@@ -1754,6 +1769,20 @@
   year =         1990,
   publisher =    {MIT Press Cambridge, MA, USA},
   keywords =     {ai}
+}
+
+@Article{	  brown64:prokofieff,
+  author =       {Malcolm H. Brown},
+  title =        {Prokofieff's Eighth Piano Sonata},
+  journal =      {Tempo},
+  year =         1964,
+  publisher =    {Cambridge University Press},
+  volume =       {New Series},
+  number =       70,
+  pages =        {9--15},
+  month =        {Autumn},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/943933}}
 }
 
 @Article{	  brown68:program,
@@ -5295,6 +5324,22 @@
   keywords =     {music history}
 }
 
+@Article{	  horsley63:diminutions,
+  author =       {Imogene Horsley},
+  title =        {The Diminutions in Composition and Theory of
+                  Composition},
+  journal =      {Acta Musicologica},
+  year =         1963,
+  publisher =    {International Musicological Society},
+  volume =       35,
+  number =       {2/3},
+  pages =        {124--153},
+  month =        {Apr.--Sep},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/931501}},
+  keywords =     {music harmony and theory}
+}
+
 @Article{	  horton86:horton,
   keyword =      {temperamento},
   title =        {Horton Hears a Whole Number Ratio},
@@ -6081,6 +6126,22 @@
   edition =      {2 ed.},
   isbn =         {1-13-924077-2},
   keywords =     {composition}
+}
+
+@Article{	  kramer81:mirror,
+  author =       {Lawrence Kramer},
+  title =        {The Mirror of Tonality: Transitional Features of
+                  Nineteenth-Century Harmony},
+  journal =      {19th-Century Music},
+  year =         1981,
+  publisher =    {University of California Press},
+  volume =       4,
+  number =       3,
+  pages =        {191--208},
+  month =        {Spring},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/746694}},
+  keywords =     {music harmony and theory}
 }
 
 @Book{		  kramer88:time,
@@ -10818,6 +10879,22 @@
   address =      {Budapest}
 }
 
+@Article{	  swift77:xii,
+  author =       {Richard Swift},
+  title =        {1/XII/99: Tonal Relations in Schoenberg's 'Verklärte
+                  Nacht'},
+  journal =      {19th-Century Music},
+  year =         1977,
+  publisher =    {University of California Press},
+  volume =       1,
+  number =       1,
+  pages =        {3--14},
+  month =        {Jul},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/746766}},
+  keywords =     {music analysis}
+}
+
 @Article{	  takeuchi93:absolute,
   author =       {Annie H. Takeuchi and Stewart H. Hulse},
   title =        {Absolute Pitch},
@@ -12021,4 +12098,20 @@
   pages =        {44--51},
   where =        {zicarelli.pdf},
   keywords =     {computer music}
+}
+
+@Article{	  zur82:tonal,
+  author =       {Menachem Zur},
+  title =        {Tonal Ambiguities as a Constructive Force in the
+                  Language of Stravinsky},
+  journal =      {The Musical Quarterly},
+  year =         1982,
+  publisher =    {Oxford University Press},
+  volume =       68,
+  number =       4,
+  pages =        {516--526},
+  month =        {Oct},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/742155}},
+  keywords =     {music analysis}
 }
