--- a/bib.bib
+++ b/bib.bib
@@ -939,6 +939,23 @@
   keywords =     {music harmony and theory}
 }
 
+@Article{	  beach93:schubert,
+  author =       {David Beach},
+  title =        {Schubert's Experiments with Sonata Form:
+                  Formal-Tonal Design versus Underlying Structure},
+  journal =      {Music Theory Spectrum},
+  year =         1993,
+  publisher =    {University of California Press on behalf of the
+                  Society for Music Theory},
+  volume =       10,
+  number =       1,
+  pages =        {1--18},
+  month =        {Spring},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/745906}},
+  keywords =     {music analysis}
+}
+
 @InProceedings{	  beal.ea97:factorial,
   author =       {Matthew J. Beal and Zoubin Ghahramani and Carl
                   Edward Rasmussen},
@@ -2448,6 +2465,22 @@
   howpublished = {Available at
                   \url{www.pps.jussieu.fr/~jch/software/cl-yacc/cl-yacc.html}},
   keywords =     {programs}
+}
+
+@Article{	  churgin98:beethoven,
+  author =       {Bathia Churgin},
+  title =        {Beethoven and the New Development-Theme in
+                  Sonata-Form Movements},
+  journal =      {The Journal of Musicology},
+  year =         1998,
+  publisher =    {University of California Press},
+  volume =       16,
+  number =       3,
+  pages =        {323--343},
+  month =        {Summer},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/763994}},
+  keywords =     {music analysis}
 }
 
 @Article{	  clark89:just,
@@ -4730,6 +4763,24 @@
   keywords =     {computer science}
 }
 
+@Article{	  graybill88:harmonic,
+  author =       {Roger Graybill},
+  title =        {Harmonic Circularity in Brahms's F Major Cello
+                  Sonata: An Alternative to Schenker's Reading in
+                  "Free Composition"},
+  journal =      {Music Theory Spectrum},
+  year =         1988,
+  publisher =    {University of California Press on behalf of the
+                  Society for Music Theory},
+  volume =       10,
+  number =       {10th Anniversary Issue},
+  pages =        {43--55},
+  month =        {Spring},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/745791}},
+  keywords =     {music analysis}
+}
+
 @Book{		  green79:form,
   title =        {Form in tonal music: an introduction to analysis},
   publisher =    {Holt Rinehart and Winston},
@@ -4737,6 +4788,21 @@
   author =       {Douglass M. Green},
   address =      {New York},
   keywords =     {music harmony and theory}
+}
+
+@Article{	  grew31:grosse,
+  author =       {Sydney Grew},
+  title =        {The 'Grosse Fuge': An Analysis},
+  journal =      {Music & Letters},
+  year =         1931,
+  publisher =    {Oxford University Press},
+  volume =       12,
+  number =       3,
+  pages =        {253--261},
+  month =        {Jul},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/726363}},
+  keywords =     {music analysis}
 }
 
 @Book{		  grier96:critical,
@@ -4813,6 +4879,21 @@
   author =       {Gruber, Roman Il ich},
   address =      {Moskva},
   keywords =     {music history}
+}
+
+@Article{	  h.72:review,
+  author =       {A. H.},
+  title =        {Review},
+  journal =      {Music & Letters},
+  year =         1972,
+  publisher =    {Oxford University Press},
+  volume =       53,
+  number =       3,
+  pages =        {329--331},
+  month =        {Jul},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/734949}},
+  keywords =     {music analysis}
 }
 
 @Article{	  haack81:case,
@@ -6267,6 +6348,22 @@
   keywords =     {music history}
 }
 
+@Article{	  larue81:review,
+  author =       {Jan LaRue},
+  title =        {Review},
+  journal =      {Journal of the American Musicological Society},
+  year =         1981,
+  publisher =    {University of California Press on behalf of the
+                  American Musicological Society},
+  volume =       34,
+  number =       3,
+  pages =        {557--566},
+  month =        {Autumn},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/831194}},
+  keywords =     {music analysis}
+}
+
 @Book{		  larue92:guidelines,
   title =        {Guidelines for style analysis},
   publisher =    {Harmonie Park Press},
@@ -6686,6 +6783,38 @@
   number =       2,
   journal =      {Music Theory On-Line},
   keywords =     {music harmony and theory}
+}
+
+@Article{	  longyear69:binary,
+  author =       {R. M. Longyear},
+  title =        {Binary Variants of Early Classic Sonata Form},
+  journal =      {Journal of Music Theory},
+  year =         1969,
+  publisher =    {Duke University Press on behalf of the Yale
+                  University Department of Music},
+  volume =       13,
+  number =       2,
+  pages =        {162--185},
+  month =        {Winter},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/842985}},
+  keywords =     {music analysis}
+}
+
+@Article{	  longyear71:minor,
+  author =       {R. M. Longyear},
+  title =        {The Minor Mode in Eighteenth-Century Sonata Form},
+  journal =      {Journal of Music Theory},
+  year =         1971,
+  publisher =    {Duke University Press on behalf of the Yale
+                  University Department of Music},
+  volume =       15,
+  number =       {1/2},
+  pages =        {182--229},
+  month =        {Spring---Winter},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/842901}},
+  keywords =     {music analysis}
 }
 
 @Book{		  longyear73:nineteenth-century,
@@ -8084,6 +8213,22 @@
   where =        {mmorph\_icmc.pdf}
 }
 
+@Article{	  orr83:effect,
+  author =       {N. Lee Orr},
+  title =        {The Effect of Scoring on the "Sonata-Form" in
+                  Mozart's Mature Instrumental Ensembles},
+  journal =      {College Music Symposium},
+  year =         1983,
+  publisher =    {College Music Society},
+  volume =       23,
+  number =       2,
+  pages =        {46--83},
+  month =        {Fall},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/40374337}},
+  keywords =     {music analysis}
+}
+
 @Book{		  ousterhout93:tcl,
   author =       {John K. Ousterhout},
   title =        {Tcl and the Tk toolkit},
@@ -9020,6 +9165,22 @@
   pages =        {554--560},
   year =         2000,
   keywords =     {ai}
+}
+
+@Article{	  ratner49:harmonic,
+  author =       {Leonard Ratner},
+  title =        {Harmonic Aspects of Classic Form},
+  journal =      {Journal of the American Musicological Society},
+  year =         1949,
+  publisher =    {University of California Press on behalf of the
+                  American Musicological Society},
+  volume =       2,
+  number =       3,
+  pages =        {159--168},
+  month =        {Autumn},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/829717}},
+  keywords =     {music analysis}
 }
 
 @Book{		  rauscher63:orchestration,
@@ -10574,6 +10735,37 @@
   year =         1996
 }
 
+@Article{	  simon59:sonata,
+  author =       {Edwin J. Simon},
+  title =        {Sonata into Concerto. A Study of Mozart's First
+                  Seven Concertos},
+  journal =      {Acta Musicologica},
+  year =         1959,
+  publisher =    {International Musicological Society},
+  volume =       31,
+  number =       {Fasc. 3/4},
+  pages =        {170--185},
+  month =        {Jul--Dec},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/931392}},
+  keywords =     {music analysis}
+}
+
+@Article{	  sims76:analysis,
+  author =       {D. Maxine Sims},
+  title =        {An Analysis and Comparison of Piano Sonatas by
+                  George Walker and Howard Swanson},
+  journal =      {The Black Perspective in Music},
+  year =         1976,
+  volume =       4,
+  number =       1,
+  pages =        {70--81},
+  month =        {Spring},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/1214404}},
+  keywords =     {music analysis}
+}
+
 @Article{	  sims89:72-tone,
   keyword =      {temperamento},
   title =        {A 72-tone Just Computer System},
@@ -10631,6 +10823,23 @@
   year =         1988
 }
 
+@Article{	  sly01:schubert,
+  author =       {Gordon Sly},
+  title =        {Schubert's Innovations in Sonata Form: Compositional
+                  Logic and Structural Interpretation},
+  journal =      {Journal of Music Theory},
+  year =         2001,
+  publisher =    {Duke University Press on behalf of the Yale
+                  University Department of Music},
+  volume =       45,
+  number =       1,
+  pages =        {119--150},
+  month =        {Spring},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/3090650}},
+  keywords =     {music analysis}
+}
+
 @InProceedings{	  smith81:program,
   author =       {Leland Smith},
   title =        {The 'SCORE' program for musical input to computers},
@@ -10656,6 +10865,22 @@
   publisher =    cma,
   where =        {kna.pdf},
   keywords =     {computer music}
+}
+
+@Article{	  smith94:liquidation,
+  author =       {Peter H. Smith},
+  title =        {Liquidation, Augmentation, and Brahms's
+                  Recapitulatory Overlaps},
+  journal =      {19th-Century Music},
+  year =         1994,
+  publisher =    {University of California Press},
+  volume =       17,
+  number =       3,
+  pages =        {237--261},
+  month =        {Spring},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/746568}},
+  keywords =     {music analysis}
 }
 
 @Article{	  sohl86:mapping,
@@ -10765,6 +10990,39 @@
   doi =          {http://doi.acm.org/10.1145/800068.802140},
   publisher =    {ACM},
   address =      {New York, NY, USA}
+}
+
+@Article{	  stevens64:review,
+  author =       {Halsey Stevens},
+  title =        {Review},
+  journal =      {Journal of Music Theory},
+  year =         1964,
+  publisher =    {Duke University Press on behalf of the Yale
+                  University Department of Music},
+  volume =       8,
+  number =       1,
+  pages =        {113--117},
+  month =        {Spring},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/842976}},
+  keywords =     {music analysis}
+}
+
+@Article{	  stevens71:18th,
+  author =       {Jane R. Stevens},
+  title =        {An 18th-Century Description of Concerto
+                  First-Movement Form},
+  journal =      {Journal of the American Musicological Society},
+  year =         1971,
+  publisher =    {University of California Press on behalf of the
+                  American Musicological Society},
+  volume =       24,
+  number =       1,
+  pages =        {85--95},
+  month =        {Spring},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/830894}},
+  keywords =     {music analysis}
 }
 
 @Book{		  stiller85:handbook,
@@ -11613,6 +11871,37 @@
   note =
                   {\url{http://www.merriam-webster.com/dictionary/algorithm}},
   keywords =     {dictionary}
+}
+
+@Article{	  webster78:schubert,
+  author =       {James Webster},
+  title =        {Schubert's Sonata Form and Brahms's First Maturity},
+  journal =      {19th-Century Music},
+  year =         1978,
+  publisher =    {University of California Press},
+  volume =       2,
+  number =       1,
+  pages =        {18--35},
+  month =        {Jul},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/746189}},
+  keywords =     {music analysis}
+}
+
+@Article{	  webster79:schubert,
+  author =       {James Webster},
+  title =        {Schubert's Sonata Form and Brahms's First Maturity
+                  (II)},
+  journal =      {19th-Century Music},
+  year =         1979,
+  publisher =    {University of California Press},
+  volume =       3,
+  number =       1,
+  pages =        {52--71+63},
+  month =        {Jul},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/3519822}},
+  keywords =     {music analysis}
 }
 
 @Article{	  wedell34:nature,
