Remove duplicata e corrige key

--- a/bib.bib
+++ b/bib.bib
@@ -3112,7 +3112,7 @@
   keywords =     {composition}
 }
 
-@InBook{	  dallin74:techniques,
+@InBook{	  dallin74:melodic,
   author =       {Leon Dallin},
   title =        {Techniques of Twentieth-Century Composition: A Guide
                   to the Materials of Modern Music},
@@ -7268,17 +7268,6 @@
   number =       4,
   volume =       4,
   year =         1988
-}
-
-@InCollection{	  mathiesen02:greece,
-  author =       {Thomas J. Mathiesen},
-  title =        {Greece, Ancient},
-  booktitle =    groveol,
-  publisher =    {Macmillan Publishers},
-  year =         2002,
-  editor =       {Laura Macy},
-  note =         {\url{www.grovemusic.com}},
-  keywords =     {greek music}
 }
 
 @Article{	  mathiesen02:greece,
