--- a/bib.bib
+++ b/bib.bib
@@ -4793,7 +4793,7 @@
 @Article{	  grew31:grosse,
   author =       {Sydney Grew},
   title =        {The 'Grosse Fuge': An Analysis},
-  journal =      {Music & Letters},
+  journal =      {Music \& Letters},
   year =         1931,
   publisher =    {Oxford University Press},
   volume =       12,
@@ -4884,7 +4884,7 @@
 @Article{	  h.72:review,
   author =       {A. H.},
   title =        {Review},
-  journal =      {Music & Letters},
+  journal =      {Music \& Letters},
   year =         1972,
   publisher =    {Oxford University Press},
   volume =       53,
